--- a/.gitmodules
+++ b/.gitmodules
@@ -61,3 +61,6 @@
 [submodule "vim/bundle/snipmate"]
 	path = vim/bundle/snipmate
 	url = git://github.com/garbas/vim-snipmate.git
+[submodule "vim/bundle/jellybean"]
+	path = vim/bundle/jellybean
+	url = git://github.com/nanotech/jellybeans.vim.git
