--- a/tmux.conf
+++ b/tmux.conf
@@ -1,8 +1,32 @@
-set-option -g status on
-set-option -g status-interval 2
-set-option -g status-utf8 on
-set-option -g status-justify "centre"
-set-option -g set-left-length 60
-set-option -g set-right-length 90
-set-option -g status-left "#(~/Projects/Src/tmux-powerline/powerline.sh left)"
-set-option -g status-right "#(~/Projects/Src/tmux-powerline/powerline.sh right)"
+# remap prefix to Control + a
+set -g prefix C-a
+unbind C-b
+bind C-a send-prefix
+
+# force a reload of the config file
+unbind r
+bind r source-file ~/.tmux-conf
+
+# quick pane cycling
+unbind ^A
+bind ^A select-pane -t :.+
+
+# improve colors
+set -g default-terminal "screen-256color"
+
+# soften status bar color from harsh green to light gray
+set -g status-bg '#666666'
+set -g status-fg '#aaaaaa'
+
+# remove admin debris
+set -g status-left ''
+set -g status-right ''
+
+# act like vim
+setw -g mode-keys vi
+bind h select-pane -L
+bind j select-pane -D
+bind k select-pane -U
+bind l select-pane -R
+bind-key -r C-h select-window -t :-
+bind-key -r C-l select-window -t :+
