--- a/tmux.conf
+++ b/tmux.conf
@@ -30,3 +30,6 @@ bind k select-pane -U
 bind l select-pane -R
 bind-key -r C-h select-window -t :-
 bind-key -r C-l select-window -t :+
+
+# copy and pasting
+set-option -g default-command "reattach-to-user-namespace -l zsh"
