huge tmux update

--- a/tmux.conf
+++ b/tmux.conf
@@ -14,15 +14,42 @@ bind ^A select-pane -t :.+
 # improve colors
 set -g default-terminal "screen-256color"
 
-# soften status bar color from harsh green to light gray
-set -g status-bg '#666666'
-set -g status-fg '#aaaaaa'
+# colorings
+set-option -g status-bg black #base02
+set-option -g status-fg yellow #yellow
+set-option -g status-attr default
 
-# remove admin debris
-set -g status-left ''
-set -g status-right ''
+# default window title colors
+set-window-option -g window-status-fg brightblue #base0
+set-window-option -g window-status-bg default
+set-window-option -g window-status-attr dim
 
-# act like vim
+# active window title colors
+set-window-option -g window-status-current-fg brightred #orange
+set-window-option -g window-status-current-bg default
+set-window-option -g window-status-current-attr bright
+
+# pane border
+set-option -g pane-border-fg black
+set-option -g pane-active-border-fg brightgreen
+
+# message text
+set-option -g message-bg black #base02
+set-option -g message-fg brightred #orange
+
+# pane number display
+set-option -g display-panes-active-colour blue #blue
+set-option -g display-panes-colour brightred #orange
+
+# statusbar
+set -g status-utf8 on
+set -g status-interval 60
+set -g status-left-length 40
+set -g status-justify centre
+set -g status-left "#[fg=green]#S"
+set -g status-right "#[fg=cyan]%R #(~/bin/battry)"
+
+# act like vim and resizing
 setw -g mode-keys vi
 bind h select-pane -L
 bind j select-pane -D
@@ -30,6 +57,47 @@ bind k select-pane -U
 bind l select-pane -R
 bind-key -r C-h select-window -t :-
 bind-key -r C-l select-window -t :+
+bind -r H resize-pane -L 5
+bind -r J resize-pane -D 5
+bind -r K resize-pane -U 5
+bind -r L resize-pane -R 5
+
+# shortcut for closing windows and panes
+bind-key c  kill-pane
+bind-key q  confirm-before kill-session
+bind-key Q  confirm-before kill-server
+unbind o
+bind o kill-pane -a
+unbind c
+bind w new-window
+
+# use v and s for windows splits
+unbind %
+bind s split-window -v
+bind v split-window -h
 
 # copy and pasting
+bind -t vi-copy 'v' begin-selection
+bind -t vi-copy 'y' copy-selection
+
+# use zsh
 set-option -g default-command "reattach-to-user-namespace -l zsh"
+set-option -g default-shell /bin/zsh
+
+# copy and pasting
+bind -t vi-copy 'v' begin-selection
+bind -t vi-copy 'y' copy-selection
+bind C run "tmux save-buffer - | reattach-to-user-namespace pbcopy"
+
+# faster escape
+set -s escape-time 0
+
+# start numbering at 1
+set -g base-index 1
+setw -g pane-base-index 1
+
+# rather than constraining window size to the maximum size of any client
+# connected to the *session*, constrain window size to the maximum size of any
+# client connected to *that window*. Much more reasonable.
+setw -g aggressive-resize on
+
