major tmux update, change colorscheme to vim

--- a/tmux.conf
+++ b/tmux.conf
@@ -29,13 +29,26 @@ set-window-option -g window-status-current-fg brightred #orange
 set-window-option -g window-status-current-bg default
 set-window-option -g window-status-current-attr bright
 
-# pane border
-set-option -g pane-border-fg black
-set-option -g pane-active-border-fg brightgreen
+# disable mouse support
+setw -g mode-mouse off
+set -g mouse-select-pane off
+set -g mouse-resize-pane off
+set -g mouse-select-window off
 
 # message text
 set-option -g message-bg black #base02
 set-option -g message-fg brightred #orange
+
+# command line colors
+set -g message-fg white
+set -g message-bg colour22
+set -g message-attr bright
+
+# set color of regular and active panes
+set -g pane-border-fg colour238
+set -g pane-border-bg default
+set -g pane-active-border-fg green
+set -g pane-active-border-bg default
 
 # pane number display
 set-option -g display-panes-active-colour blue #blue
@@ -46,8 +59,17 @@ set -g status-utf8 on
 set -g status-interval 60
 set -g status-left-length 40
 set -g status-justify centre
-set -g status-left "#[fg=green]#S"
-set -g status-right "#[fg=cyan]%R #(~/bin/battry)"
+set -g status-left "#[fg=green]\"#S\""
+
+# window colors of inactive windows
+setw -g window-status-fg cyan
+setw -g window-status-bg colour234
+setw -g window-status-attr dim
+
+# window color of active windows
+setw -g window-status-current-fg white
+setw -g window-status-current-bg colour88
+setw -g window-status-current-attr bright
 
 # act like vim and resizing
 setw -g mode-keys vi
