--- a/tmux.conf
+++ b/tmux.conf
@@ -1,48 +1,66 @@
-# remap prefix to Control + a
-set -g prefix C-a
+# ubind some default keybindings
 unbind C-b
+
+# set prefix key to ctrl-a
+set -g prefix C-a
+
+# pass through a ctrl-a if you press it twice
 bind C-a send-prefix
 
-# force a reload of the config file
-unbind r
-bind r source-file ~/.tmux-conf
+# lower command delay
+set -sg escape-time 1
 
-# quick pane cycling
-unbind ^A
-bind ^A select-pane -t :.+
+# start first window and pane at 1, not zero
+set -g base-index 1
+set -g pane-base-index 1
 
-# improve colors
+# bind r to reloading the config file
+bind r source-file ~/.tmux.conf \; display "Reloaded tmux config file."
+
+# better splitting of windows
+bind | split-window -v
+bind - split-window -s
+
+# navigate using vim-style keys
+setw -g mode-keys vi
+
+# vim style for pane movement
+bind -r h select-pane -L
+bind -r j select-pane -D
+bind -r k select-pane -U
+bind -r l select-pane -R
+
+# vim style for window movement
+bind -r C-h select-window -t :-
+bind -r C-l select-window -t :+
+
+# shift-movement keys will resize panes
+bind -r H resize-pane -L 5
+bind -r J resize-pane -D 5
+bind -r K resize-pane -U 5
+bind -r L resize-pane -R 5
+
+# set up aliases for temporarily maximizing panes
+unbind Up
+bind Up new-window -d -n tmp \; swap-pane -s tmp.1 \; select-window -t tmp
+
+unbind Down
+bind Down last-window \; swap-pane -s tmp.1 \; kill-window -t tmp
+
+# copy/paste using vim-style keys
+bind Escape copy-mode
+unbind p
+bind p paste-buffer
+bind -t vi-copy 'v' begin-selection
+bind -t vi-copy 'y' copy-selection
+
+# turn on 256 color support
 set -g default-terminal "screen-256color"
 
-# colorings
-set-option -g status-bg black #base02
-set-option -g status-fg yellow #yellow
-set-option -g status-attr default
-
-# default window title colors
-set-window-option -g window-status-fg brightblue #base0
-set-window-option -g window-status-bg default
-set-window-option -g window-status-attr dim
-
-# active window title colors
-set-window-option -g window-status-current-fg brightred #orange
-set-window-option -g window-status-current-bg default
-set-window-option -g window-status-current-attr bright
-
-# disable mouse support
-setw -g mode-mouse off
-set -g mouse-select-pane off
-set -g mouse-resize-pane off
-set -g mouse-select-window off
-
-# message text
-set-option -g message-bg black #base02
-set-option -g message-fg brightred #orange
-
-# command line colors
-set -g message-fg white
-set -g message-bg colour22
-set -g message-attr bright
+# change color of active window
+setw -g window-status-current-fg white
+setw -g window-status-current-bg colour88
+setw -g window-status-current-attr bright
 
 # set color of regular and active panes
 set -g pane-border-fg colour238
@@ -50,76 +68,5 @@ set -g pane-border-bg default
 set -g pane-active-border-fg green
 set -g pane-active-border-bg default
 
-# pane number display
-set-option -g display-panes-active-colour blue #blue
-set-option -g display-panes-colour brightred #orange
-
-# statusbar
-set -g status-utf8 on
-set -g status-interval 60
-set -g status-left-length 40
-set -g status-justify centre
-set -g status-left "#[fg=green]\"#S\""
-
-# window colors of inactive windows
-setw -g window-status-fg cyan
-setw -g window-status-bg colour234
-setw -g window-status-attr dim
-
-# window color of active windows
-setw -g window-status-current-fg white
-setw -g window-status-current-bg colour88
-setw -g window-status-current-attr bright
-
-# act like vim and resizing
-setw -g mode-keys vi
-bind h select-pane -L
-bind j select-pane -D
-bind k select-pane -U
-bind l select-pane -R
-bind-key -r C-h select-window -t :-
-bind-key -r C-l select-window -t :+
-bind -r H resize-pane -L 15
-bind -r J resize-pane -D 15
-bind -r K resize-pane -U 15
-bind -r L resize-pane -R 15
-
-# shortcut for closing windows and panes
-bind-key c  kill-pane
-bind-key q  confirm-before kill-session
-bind-key Q  confirm-before kill-server
-unbind o
-bind o kill-pane -a
-unbind c
-bind w new-window
-
-# use v and s for windows splits
-unbind %
-bind s split-window -v
-bind v split-window -h
-
-# copy and pasting
-bind -t vi-copy 'v' begin-selection
-bind -t vi-copy 'y' copy-selection
-
-# use zsh
-set-option -g default-command "reattach-to-user-namespace -l zsh"
-set-option -g default-shell /bin/zsh
-
-# copy and pasting
-bind -t vi-copy 'v' begin-selection
-bind -t vi-copy 'y' copy-selection
-bind C run "tmux save-buffer - | reattach-to-user-namespace pbcopy"
-
-# faster escape
-set -s escape-time 0
-
-# start numbering at 1
-set -g base-index 1
-setw -g pane-base-index 1
-
-# rather than constraining window size to the maximum size of any client
-# connected to the *session*, constrain window size to the maximum size of any
-# client connected to *that window*. Much more reasonable.
-setw -g aggressive-resize on
-
+# use powerline: https://github.com/Lokaltog/powerline
+source '/usr/local/lib/python2.7/site-packages/powerline/bindings/tmu/powerline.conf'
