change theme to jellybeans

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,3 +1,6 @@
+k use powerline: https://github.com/Lokaltog/powerline
+source '/usr/local/lib/python2.7/site-packages/powerline/bindings/tmux/powerline.conf'
+
 # ubind some default keybindings
 unbind C-b
 
@@ -16,10 +19,6 @@ set -g pane-base-index 1
 
 # bind r to reloading the config file
 bind r source-file ~/.tmux.conf \; display "Reloaded tmux config file."
-
-# better splitting of windows
-bind | split-window -v
-bind - split-window -s
 
 # navigate using vim-style keys
 setw -g mode-keys vi
@@ -54,6 +53,8 @@ bind p paste-buffer
 bind -t vi-copy 'v' begin-selection
 bind -t vi-copy 'y' copy-selection
 
+set-option -g default-command "reattach-to-user-namespace -l zsh"
+
 # turn on 256 color support
 set -g default-terminal "screen-256color"
 
@@ -68,5 +69,3 @@ set -g pane-border-bg default
 set -g pane-active-border-fg green
 set -g pane-active-border-bg default
 
-# use powerline: https://github.com/Lokaltog/powerline
-source '/usr/local/lib/python2.7/site-packages/powerline/bindings/tmu/powerline.conf'
