theme update, major tmux overhaul

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,4 +1,4 @@
-k use powerline: https://github.com/Lokaltog/powerline
+# use powerline: https://github.com/Lokaltog/powerline
 source '/usr/local/lib/python2.7/site-packages/powerline/bindings/tmux/powerline.conf'
 
 # ubind some default keybindings
@@ -17,27 +17,53 @@ set -sg escape-time 1
 set -g base-index 1
 set -g pane-base-index 1
 
+# be notified when there is activity in one of your windows
+set-window-option -g monitor-activity on
+
 # bind r to reloading the config file
 bind r source-file ~/.tmux.conf \; display "Reloaded tmux config file."
+
+# don't rename windows automatically
+set-window-option -g automatic-rename off
+
+# Rather than constraining window size to the maximum size of any client 
+# connected to the *session*, constrain window size to the maximum size of any 
+# client connected to *that window*. Much more reasonable.
+setw -g aggressive-resize on
+
+# open a man page in new window
+bind-key / command-prompt "split-window 'exec man %%'"
+
+# quick view of processes
+bind-key "~" split-window "exec htop"
 
 # navigate using vim-style keys
 setw -g mode-keys vi
 
-# vim style for pane movement
-bind -r h select-pane -L
-bind -r j select-pane -D
-bind -r k select-pane -U
-bind -r l select-pane -R
+# splitting
+unbind %
+bind v split-window -h
+unbind '"'
+bind s split-window -v
 
-# vim style for window movement
-bind -r C-h select-window -t :-
-bind -r C-l select-window -t :+
+# vim style for pane movement
+bind-key -n C-h select-pane -L
+bind-key -n C-j select-pane -D
+bind-key -n C-k select-pane -U
+bind-key -n C-l select-pane -R
+
+# swap panes
+bind-key -n C-b swap-pane -D
 
 # shift-movement keys will resize panes
 bind -r H resize-pane -L 5
 bind -r J resize-pane -D 5
 bind -r K resize-pane -U 5
 bind -r L resize-pane -R 5
+
+# kill windows
+bind k confirm kill-window
+bind K confirm kill-server
 
 # set up aliases for temporarily maximizing panes
 unbind Up
