--- a/tmux.conf
+++ b/tmux.conf
@@ -47,10 +47,10 @@ unbind '"'
 bind s split-window -v
 
 # vim style for pane movement
-bind-key -n C-h select-pane -L
-bind-key -n C-j select-pane -D
-bind-key -n C-k select-pane -U
-bind-key -n C-l select-pane -R
+bind -r h select-pane -L
+bind -r j select-pane -D
+bind -r k select-pane -U
+bind -r l select-pane -R
 
 # swap panes
 bind-key -n C-b swap-pane -D
