--- a/tmux.conf
+++ b/tmux.conf
@@ -3,6 +3,8 @@ source '/usr/local/lib/python2.7/site-packages/powerline/bindings/tmux/powerline
 
 # ubind some default keybindings
 unbind C-b
+unbind n
+unbind ,
 
 # set prefix key to ctrl-a
 set -g prefix C-a
@@ -23,8 +25,8 @@ set-window-option -g monitor-activity on
 # bind r to reloading the config file
 bind r source-file ~/.tmux.conf \; display "Reloaded tmux config file."
 
-# don't rename windows automatically
-set-window-option -g automatic-rename off
+# make n rename window key
+bind-key n command-prompt 'rename-window %%'
 
 # Rather than constraining window size to the maximum size of any client 
 # connected to the *session*, constrain window size to the maximum size of any 
@@ -39,6 +41,9 @@ bind-key "~" split-window "exec htop"
 
 # navigate using vim-style keys
 setw -g mode-keys vi
+
+# mouseable
+setw -g mode-mouse on
 
 # splitting
 unbind %
@@ -62,7 +67,7 @@ bind -r K resize-pane -U 5
 bind -r L resize-pane -R 5
 
 # kill windows
-bind k confirm kill-window
+# bind k confirm kill-window
 bind K confirm kill-server
 
 # set up aliases for temporarily maximizing panes
@@ -95,3 +100,8 @@ set -g pane-border-bg default
 set -g pane-active-border-fg green
 set -g pane-active-border-bg default
 
+# you set window name
+set-option -g visual-activity on
+set-option -g visual-content on
+set-window-option -g monitor-activity on
+set-window-option -g automatic-rename on
