--- a/tmux.conf
+++ b/tmux.conf
@@ -15,9 +15,6 @@ bind C-a send-prefix
 # lower command delay
 set -sg escape-time 1
 
-# start first window and pane at 1, not zero
-set -g base-index 1
-set -g pane-base-index 1
 
 # be notified when there is activity in one of your windows
 set-window-option -g monitor-activity on
@@ -101,7 +98,11 @@ set -g pane-active-border-fg green
 set -g pane-active-border-bg default
 
 # you set window name
-set-option -g visual-activity on
+jet-option -g visual-activity on
 set-option -g visual-content on
 set-window-option -g monitor-activity on
 set-window-option -g automatic-rename on
+
+# start first window and pane at 2, not zero
+set -g base-index 1
+set -g pane-base-index 1
