changed tmux configs

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,10 +1,11 @@
 # use powerline: https://github.com/Lokaltog/powerline
-source '/usr/local/lib/python2.7/site-packages/powerline/bindings/tmux/powerline.conf'
+source '/Library/Python/2.7/site-packages/powerline/bindings/tmux/powerline.conf'
 
 # ubind some default keybindings
 unbind C-b
 unbind n
 unbind ,
+unbind c
 
 # set prefix key to ctrl-a
 set -g prefix C-a
@@ -15,12 +16,14 @@ bind C-a send-prefix
 # lower command delay
 set -sg escape-time 1
 
-
-# be notified when there is activity in one of your windows
-set-window-option -g monitor-activity on
+# new window
+bind c new-window
 
 # bind r to reloading the config file
 bind r source-file ~/.tmux.conf \; display "Reloaded tmux config file."
+
+# be notified when there is activity in one of your windows
+set-window-option -g monitor-activity on
 
 # make n rename window key
 bind-key n command-prompt 'rename-window %%'
@@ -31,7 +34,7 @@ bind-key n command-prompt 'rename-window %%'
 setw -g aggressive-resize on
 
 # open a man page in new window
-bind-key / command-prompt "split-window 'exec man %%'"
+bind-key / command-prompt "split-window -h 'exec man %%'"
 
 # quick view of processes
 bind-key "~" split-window "exec htop"
@@ -40,7 +43,13 @@ bind-key "~" split-window "exec htop"
 setw -g mode-keys vi
 
 # mouseable
-setw -g mode-mouse on
+set -g mode-mouse on
+setw -g mouse-select-window on
+setw -g mouse-select-pane on
+
+# get your bell on
+set-option -g bell-action any
+set-option -g visual-bell off
 
 # splitting
 unbind %
@@ -98,11 +107,14 @@ set -g pane-active-border-fg green
 set -g pane-active-border-bg default
 
 # you set window name
-jet-option -g visual-activity on
+set-option -g visual-activity on
 set-option -g visual-content on
 set-window-option -g monitor-activity on
 set-window-option -g automatic-rename on
 
-# start first window and pane at 2, not zero
-set -g base-index 1
-set -g pane-base-index 1
+# start at 1
+set-option -g base-index 1
+setw -g pane-base-index 1
+
+# connect to a hostname
+bind-key S command-prompt -p ssh: "new-window -n %1 'ssh %1'"
