--- a/tmux.conf
+++ b/tmux.conf
@@ -1,120 +1,69 @@
-# use powerline: https://github.com/Lokaltog/powerline
-source '/Library/Python/2.7/site-packages/powerline/bindings/tmux/powerline.conf'
+# Ring the bell if any background window rang a bell
+set -g bell-action any
 
-# ubind some default keybindings
-unbind C-b
-unbind n
-unbind ,
-unbind c
+# Default termtype. If the rcfile sets $TERM, that overrides this value.
+set -g default-terminal screen-256color
 
-# set prefix key to ctrl-a
-set -g prefix C-a
+# Keep your finger on ctrl, or don't
+bind-key ^D detach-client
 
-# pass through a ctrl-a if you press it twice
-bind C-a send-prefix
+# Create splits and vertical splits
+bind-key v split-window -h
+bind-key ^V split-window -h
+bind-key s split-window
+bind-key ^S split-window
 
-# lower command delay
-set -sg escape-time 1
+# Pane resize in all four directions using vi bindings.
+# Can use these raw but I map them to shift-ctrl-<h,j,k,l> in iTerm.
+bind-key J resize-pane -D
+bind-key K resize-pane -U
+bind-key H resize-pane -L
+bind-key L resize-pane -R
 
-# new window
-bind c new-window
+# Use vi keybindings for tmux commandline input.
+# Note that to get command mode you need to hit ESC twice...
+set -g status-keys vi
 
-# bind r to reloading the config file
-bind r source-file ~/.tmux.conf \; display "Reloaded tmux config file."
-
-# be notified when there is activity in one of your windows
-set-window-option -g monitor-activity on
-
-# make n rename window key
-bind-key n command-prompt 'rename-window %%'
-
-# Rather than constraining window size to the maximum size of any client 
-# connected to the *session*, constrain window size to the maximum size of any 
-# client connected to *that window*. Much more reasonable.
-setw -g aggressive-resize on
-
-# open a man page in new window
-bind-key / command-prompt "split-window -h 'exec man %%'"
-
-# quick view of processes
-bind-key "~" split-window "exec htop"
-
-# navigate using vim-style keys
+# Use vi keybindings in copy and choice modes
 setw -g mode-keys vi
 
-# mouseable
-set -g mode-mouse on
-setw -g mouse-select-window on
-setw -g mouse-select-pane on
+# easily toggle synchronization (mnemonic: e is for echo)
+# sends input to all panes in a given window.
+bind e setw synchronize-panes on
+bind E setw synchronize-panes off
 
-# get your bell on
-set-option -g bell-action any
-set-option -g visual-bell off
-
-# splitting
-unbind %
-bind v split-window -h
-unbind '"'
-bind s split-window -v
-
-# vim style for pane movement
-bind -r h select-pane -L
-bind -r j select-pane -D
-bind -r k select-pane -U
-bind -r l select-pane -R
-
-# swap panes
-bind-key -n C-b swap-pane -D
-
-# shift-movement keys will resize panes
-bind -r H resize-pane -L 5
-bind -r J resize-pane -D 5
-bind -r K resize-pane -U 5
-bind -r L resize-pane -R 5
-
-# kill windows
-# bind k confirm kill-window
-bind K confirm kill-server
-
-# set up aliases for temporarily maximizing panes
-unbind Up
-bind Up new-window -d -n tmp \; swap-pane -s tmp.1 \; select-window -t tmp
-
-unbind Down
-bind Down last-window \; swap-pane -s tmp.1 \; kill-window -t tmp
-
-# copy/paste using vim-style keys
-bind Escape copy-mode
-unbind p
-bind p paste-buffer
-bind -t vi-copy 'v' begin-selection
-bind -t vi-copy 'y' copy-selection
-
-set-option -g default-command "reattach-to-user-namespace -l zsh"
-
-# turn on 256 color support
-set -g default-terminal "screen-256color"
-
-# change color of active window
-setw -g window-status-current-fg white
-setw -g window-status-current-bg colour88
-setw -g window-status-current-attr bright
-
-# set color of regular and active panes
-set -g pane-border-fg colour238
-set -g pane-border-bg default
-set -g pane-active-border-fg green
-set -g pane-active-border-bg default
-
-# you set window name
-set-option -g visual-activity on
-set-option -g visual-content on
-set-window-option -g monitor-activity on
-set-window-option -g automatic-rename on
-
-# start at 1
+# set first window to index 1 (not 0) to map more to the keyboard layout...
 set-option -g base-index 1
-setw -g pane-base-index 1
+set-window-option -g pane-base-index 1
 
-# connect to a hostname
-bind-key S command-prompt -p ssh: "new-window -n %1 'ssh %1'"
+# color scheme (styled as vim-powerline)
+set -g status-left-length 52
+set -g status-right-length 451
+set -g status-fg white
+set -g status-bg colour234
+set -g pane-border-fg colour245
+set -g pane-active-border-fg colour39
+set -g message-fg colour16
+set -g message-bg colour221
+set -g message-attr bold
+set -g status-left '#[fg=colour235,bg=colour252,bold] ❐ #S #[fg=colour252,bg=colour238,nobold]⮀#[fg=colour245,bg=colour238,bold] #(whoami) #[fg=colour238,bg=colour234,nobold]⮀'
+set -g window-status-format "#[fg=colour235,bg=colour252,bold] #I #W "
+set -g window-status-current-format "#[fg=colour234,bg=colour39]⮀#[fg=black,bg=colour39,noreverse,bold] #I: #W #[fg=colour39,bg=colour234,nobold]⮀"
+
+# Patch for OS X pbpaste and pbcopy under tmux.
+set-option -g default-command "which reattach-to-user-namespace > /dev/null && reattach-to-user-namespace -l $SHELL || $SHELL"
+
+# Screen like binding
+unbind C-b
+set -g prefix C-a
+bind a send-prefix
+
+# No escape time for vi mode
+set -sg escape-time 0
+
+# Screen like binding for last window
+unbind l
+bind C-a last-window
+
+# Bigger history
+set -g history-limit 10000
