huge tmux update, new vim colorscheme

--- a/tmux.conf
+++ b/tmux.conf
@@ -2,7 +2,7 @@
 set -g bell-action any
 
 # Default termtype. If the rcfile sets $TERM, that overrides this value.
-set -g default-terminal screen-256color
+set -g default-terminal "xterm"
 
 # Keep your finger on ctrl, or don't
 bind-key ^D detach-client
@@ -40,15 +40,15 @@ set-window-option -g pane-base-index 1
 set -g status-left-length 52
 set -g status-right-length 451
 set -g status-fg white
-set -g status-bg colour234
-set -g pane-border-fg colour245
+set -g status-bg colour8
+set -g pane-border-fg colour235
 set -g pane-active-border-fg colour39
 set -g message-fg colour16
 set -g message-bg colour221
 set -g message-attr bold
-set -g status-left '#[fg=colour235,bg=colour252,bold] ❐ #S #[fg=colour252,bg=colour238,nobold]⮀#[fg=colour245,bg=colour238,bold] #(whoami) #[fg=colour238,bg=colour234,nobold]⮀'
+set -g status-left '#[fg=colour235,bg=colour252,bold] ❐ #S #[fg=colour252,bg=colour238,nobold]⮀#[fg=colour245,bg=colour238,bold] #(whoami) #[fg=colour238,bg=colour8,nobold]⮀'
 set -g window-status-format "#[fg=colour235,bg=colour252,bold] #I #W "
-set -g window-status-current-format "#[fg=colour234,bg=colour39]⮀#[fg=black,bg=colour39,noreverse,bold] #I: #W #[fg=colour39,bg=colour234,nobold]⮀"
+set -g window-status-current-format "#[fg=colour8,bg=colour39]⮀#[fg=black,bg=colour39,noreverse,bold] #I: #W #[fg=colour39,bg=colour8,nobold]⮀"
 
 # Patch for OS X pbpaste and pbcopy under tmux.
 set-option -g default-command "which reattach-to-user-namespace > /dev/null && reattach-to-user-namespace -l $SHELL || $SHELL"
@@ -65,5 +65,6 @@ set -sg escape-time 0
 unbind l
 bind C-a last-window
 
-# Bigger history
-set -g history-limit 10000
+# force a reload of the config file
+bind-key R source-file ~/.tmux.conf; display-message "~/.tmux.conf is reloaded"
+
