--- a/tmux.conf
+++ b/tmux.conf
@@ -27,17 +27,19 @@ bind -n C-k run "(tmux display-message -p '#{pane_current_command}' | grep -iq v
 bind -n C-l run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-l) || tmux select-pane -R"
 bind -n C-\ run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys 'C-\\') || tmux select-pane -l"
 
+# set up aliases for temporarily maximizing panes
+unbind Up
+bind Up new-window -d -n tmp \; swap-pane -s tmp.1 \; select-window -t tmp
+
+unbind Down
+bind Down last-window \; swap-pane -s tmp.1 \; kill-window -t tmp
+
 # Use vi keybindings for tmux commandline input.
 # Note that to get command mode you need to hit ESC twice...
 set -g status-keys vi
 
 # Use vi keybindings in copy and choice modes
 setw -g mode-keys vi
-
-# easily toggle synchronization (mnemonic: e is for echo)
-# sends input to all panes in a given window.
-bind e setw synchronize-panes on
-bind E setw synchronize-panes off
 
 # set first window to index 1 (not 0) to map more to the keyboard layout...
 set-option -g base-index 1
@@ -47,15 +49,15 @@ set-window-option -g pane-base-index 1
 set -g status-left-length 52
 set -g status-right-length 451
 set -g status-fg white
-set -g status-bg colour8
+set -g status-bg colour235
 set -g pane-border-fg colour235
 set -g pane-active-border-fg colour39
 set -g message-fg colour16
 set -g message-bg colour221
 set -g message-attr bold
-set -g status-left '#[fg=colour235,bg=colour252,bold] ❐ #S #[fg=colour252,bg=colour238,nobold]⮀#[fg=colour245,bg=colour238,bold] #(whoami) #[fg=colour238,bg=colour8,nobold]⮀'
+set -g status-left '#[fg=colour235,bg=colour252,bold] ❐ #S #[fg=colour252,bg=colour238,nobold]⮀#[fg=colour245,bg=colour238,bold] #(whoami) '
 set -g window-status-format "#[fg=colour235,bg=colour252,bold] #I #W "
-set -g window-status-current-format "#[fg=colour8,bg=colour39]⮀#[fg=black,bg=colour39,noreverse,bold] #I: #W #[fg=colour39,bg=colour8,nobold]⮀"
+set -g window-status-current-format "#[fg=black,bg=colour39,noreverse,bold] #I: #W #[fg=colour39,bg=colour235,nobold]⮀"
 
 # Patch for OS X pbpaste and pbcopy under tmux.
 set-option -g default-command "which reattach-to-user-namespace > /dev/null && reattach-to-user-namespace -l $SHELL || $SHELL"
